# rust-nation-2024-egg-timer

./: Cargo.toml  README.md  rust-toolchain.toml
shared/: Cargo.toml
shared/src/: app.rs  lib.rs
shared/src/capabilities/: mod.rs  wall_clock.rs
shared_types/: build.rs
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/app/: core.ts  interval.ts
